@@ -1,5 +1,5 @@
 /*
- * SPDX-License-Identifier: LGPL-2.1-or-later
+ * SPDX-License-Identifier: Apache-2.0
  * Copyright Red Hat Inc. and Hibernate Authors
  */
 package org.hibernate.persister.entity;
@@ -19,7 +19,6 @@ import org.hibernate.PropertyValueException;
 import org.hibernate.QueryException;
 import org.hibernate.annotations.CacheLayout;
 import org.hibernate.boot.Metadata;
-import org.hibernate.boot.model.internal.SoftDeleteHelper;
 import org.hibernate.boot.model.relational.SqlStringGenerationContext;
 import org.hibernate.boot.spi.MetadataImplementor;
 import org.hibernate.boot.spi.SessionFactoryOptions;
@@ -40,7 +39,6 @@ import org.hibernate.cache.spi.entry.ReferenceCacheEntryImpl;
 import org.hibernate.cache.spi.entry.StandardCacheEntryImpl;
 import org.hibernate.cache.spi.entry.StructuredCacheEntry;
 import org.hibernate.cache.spi.entry.UnstructuredCacheEntry;
-import org.hibernate.classic.Lifecycle;
 import org.hibernate.collection.spi.PersistentCollection;
 import org.hibernate.dialect.Dialect;
 import org.hibernate.dialect.lock.LockingStrategy;
@@ -49,7 +47,6 @@ import org.hibernate.engine.OptimisticLockStyle;
 import org.hibernate.engine.internal.CacheHelper;
 import org.hibernate.engine.internal.ImmutableEntityEntryFactory;
 import org.hibernate.engine.internal.MutableEntityEntryFactory;
-import org.hibernate.engine.internal.StatefulPersistenceContext;
 import org.hibernate.engine.jdbc.spi.JdbcCoordinator;
 import org.hibernate.engine.profile.internal.FetchProfileAffectee;
 import org.hibernate.engine.spi.CachedNaturalIdValueSource;
@@ -70,7 +67,6 @@ import org.hibernate.engine.spi.SessionFactoryImplementor;
 import org.hibernate.engine.spi.SessionImplementor;
 import org.hibernate.engine.spi.SharedSessionContractImplementor;
 import org.hibernate.event.spi.EventSource;
-import org.hibernate.event.spi.LoadEvent;
 import org.hibernate.event.spi.MergeContext;
 import org.hibernate.generator.BeforeExecutionGenerator;
 import org.hibernate.generator.EventType;
@@ -90,18 +86,16 @@ import org.hibernate.internal.CoreMessageLogger;
 import org.hibernate.internal.FilterAliasGenerator;
 import org.hibernate.internal.FilterHelper;
 import org.hibernate.internal.util.IndexedConsumer;
-import org.hibernate.internal.util.LazyValue;
 import org.hibernate.internal.util.MarkerObject;
 import org.hibernate.internal.util.StringHelper;
 import org.hibernate.internal.util.collections.ArrayHelper;
 import org.hibernate.internal.util.collections.LockModeEnumMap;
 import org.hibernate.jdbc.Expectation;
-import org.hibernate.loader.ast.internal.CacheEntityLoaderHelper;
 import org.hibernate.loader.ast.internal.EntityConcreteTypeLoader;
 import org.hibernate.loader.ast.internal.LoaderSelectBuilder;
 import org.hibernate.loader.ast.internal.LoaderSqlAstCreationState;
 import org.hibernate.loader.ast.internal.MultiIdEntityLoaderArrayParam;
-import org.hibernate.loader.ast.internal.MultiIdEntityLoaderStandard;
+import org.hibernate.loader.ast.internal.MultiIdEntityLoaderInPredicate;
 import org.hibernate.loader.ast.internal.SingleIdArrayLoadPlan;
 import org.hibernate.loader.ast.internal.SingleIdEntityLoaderProvidedQueryImpl;
 import org.hibernate.loader.ast.internal.SingleIdEntityLoaderStandardImpl;
@@ -122,7 +116,6 @@ import org.hibernate.mapping.Formula;
 import org.hibernate.mapping.Join;
 import org.hibernate.mapping.PersistentClass;
 import org.hibernate.mapping.Property;
-import org.hibernate.mapping.RootClass;
 import org.hibernate.mapping.Selectable;
 import org.hibernate.mapping.Subclass;
 import org.hibernate.mapping.Table;
@@ -132,7 +125,6 @@ import org.hibernate.metamodel.mapping.Association;
 import org.hibernate.metamodel.mapping.AttributeMapping;
 import org.hibernate.metamodel.mapping.AttributeMappingsList;
 import org.hibernate.metamodel.mapping.AttributeMappingsMap;
-import org.hibernate.metamodel.mapping.DiscriminatorConverter;
 import org.hibernate.metamodel.mapping.DiscriminatorType;
 import org.hibernate.metamodel.mapping.EmbeddableValuedModelPart;
 import org.hibernate.metamodel.mapping.EntityDiscriminatorMapping;
@@ -143,7 +135,7 @@ import org.hibernate.metamodel.mapping.EntityVersionMapping;
 import org.hibernate.metamodel.mapping.ForeignKeyDescriptor;
 import org.hibernate.metamodel.mapping.JdbcMapping;
 import org.hibernate.metamodel.mapping.ManagedMappingType;
-import org.hibernate.metamodel.mapping.MappingModelHelper;
+import org.hibernate.metamodel.mapping.internal.MappingModelHelper;
 import org.hibernate.metamodel.mapping.ModelPart;
 import org.hibernate.metamodel.mapping.NaturalIdMapping;
 import org.hibernate.metamodel.mapping.NonAggregatedIdentifierMapping;
@@ -195,7 +187,6 @@ import org.hibernate.query.named.NamedQueryMemento;
 import org.hibernate.query.spi.QueryOptions;
 import org.hibernate.query.sql.internal.SQLQueryParser;
 import org.hibernate.query.sqm.ComparisonOperator;
-import org.hibernate.query.sqm.function.SqmFunctionRegistry;
 import org.hibernate.query.sqm.mutation.spi.SqmMultiTableInsertStrategy;
 import org.hibernate.query.sqm.mutation.spi.SqmMultiTableMutationStrategy;
 import org.hibernate.query.sqm.mutation.spi.SqmMultiTableMutationStrategyProvider;
@@ -234,6 +225,8 @@ import org.hibernate.sql.exec.spi.JdbcOperation;
 import org.hibernate.sql.exec.spi.JdbcParametersList;
 import org.hibernate.sql.model.MutationOperation;
 import org.hibernate.sql.model.MutationOperationGroup;
+import org.hibernate.sql.model.ast.ColumnValueBinding;
+import org.hibernate.sql.model.ast.MutatingTableReference;
 import org.hibernate.sql.model.ast.builder.MutationGroupBuilder;
 import org.hibernate.sql.model.ast.builder.TableInsertBuilder;
 import org.hibernate.sql.results.graph.DomainResult;
@@ -258,7 +251,6 @@ import org.hibernate.type.ManyToOneType;
 import org.hibernate.type.Type;
 import org.hibernate.type.descriptor.java.JavaType;
 import org.hibernate.type.descriptor.java.MutabilityPlan;
-import org.hibernate.type.descriptor.java.spi.JavaTypeRegistry;
 import org.hibernate.type.spi.TypeConfiguration;
 
 import java.io.Serializable;
@@ -269,7 +261,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.BitSet;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -288,6 +279,8 @@ import java.util.function.Supplier;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
+import static java.util.Collections.unmodifiableList;
+import static org.hibernate.boot.model.internal.SoftDeleteHelper.resolveSoftDeleteMapping;
 import static org.hibernate.engine.internal.ManagedTypeHelper.asPersistentAttributeInterceptable;
 import static org.hibernate.engine.internal.ManagedTypeHelper.isPersistentAttributeInterceptable;
 import static org.hibernate.engine.internal.ManagedTypeHelper.processIfManagedEntity;
@@ -297,7 +290,9 @@ import static org.hibernate.generator.EventType.INSERT;
 import static org.hibernate.generator.EventType.UPDATE;
 import static org.hibernate.internal.util.ReflectHelper.isAbstractClass;
 import static org.hibernate.internal.util.StringHelper.isEmpty;
+import static org.hibernate.internal.util.StringHelper.qualify;
 import static org.hibernate.internal.util.StringHelper.qualifyConditionally;
+import static org.hibernate.internal.util.StringHelper.unqualify;
 import static org.hibernate.internal.util.collections.ArrayHelper.contains;
 import static org.hibernate.internal.util.collections.ArrayHelper.isAllTrue;
 import static org.hibernate.internal.util.collections.ArrayHelper.to2DStringArray;
@@ -324,7 +319,8 @@ import static org.hibernate.sql.ast.spi.SqlExpressionResolver.createColumnRefere
 @Internal
 @SuppressWarnings("deprecation")
 public abstract class AbstractEntityPersister
-		implements EntityPersister, InFlightEntityMappingType, EntityMutationTarget, LazyPropertyInitializer, FetchProfileAffectee, Joinable {
+		implements EntityPersister, InFlightEntityMappingType, EntityMutationTarget, LazyPropertyInitializer,
+				FetchProfileAffectee, Joinable {
 
 	private static final CoreMessageLogger LOG = CoreLogging.messageLogger( AbstractEntityPersister.class );
 
@@ -464,8 +460,6 @@ public abstract class AbstractEntityPersister
 	 */
 	private final EntityPropertyMapping propertyMapping;
 
-	private final boolean implementsLifecycle;
-
 	private List<UniqueKeyEntry> uniqueKeyEntries = null; //lazily initialized
 	private ConcurrentHashMap<String,SingleIdArrayLoadPlan> nonLazyPropertyLoadPlansByName;
 
@@ -500,7 +494,7 @@ public abstract class AbstractEntityPersister
 			isLazyPropertiesCacheable = true;
 		}
 
-		entityMetamodel = new EntityMetamodel( persistentClass, this, creationContext );
+		entityMetamodel = creationContext.createEntityMetamodel( persistentClass, this );
 
 		entityEntryFactory = entityMetamodel.isMutable()
 				? MutableEntityEntryFactory.INSTANCE
@@ -518,12 +512,12 @@ public abstract class AbstractEntityPersister
 
 		// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-		representationStrategy = creationContext.getBootstrapContext().getRepresentationStrategySelector()
-				.resolveStrategy( persistentClass, this, creationContext );
-
+		representationStrategy =
+				creationContext.getBootstrapContext().getRepresentationStrategySelector()
+						.resolveStrategy( persistentClass, this, creationContext );
 		javaType = representationStrategy.getLoadJavaType();
 		assert javaType != null;
-		this.implementsLifecycle = Lifecycle.class.isAssignableFrom( javaType.getJavaTypeClass() );
+		accessOptimizer = accessOptimizer( representationStrategy );
 
 		concreteProxy = entityMetamodel.isPolymorphic()
 				&& ( getBytecodeEnhancementMetadata().isEnhancedForLazyLoading() || hasProxy() )
@@ -554,18 +548,13 @@ public abstract class AbstractEntityPersister
 		queryLoaderName = persistentClass.getLoaderName();
 
 		final TypeConfiguration typeConfiguration = creationContext.getTypeConfiguration();
-		final SqmFunctionRegistry functionRegistry = creationContext.getFunctionRegistry();
 
 		final List<Column> columns = persistentClass.getIdentifier().getColumns();
 		for (int i = 0; i < columns.size(); i++ ) {
 			final Column column = columns.get(i);
 			rootTableKeyColumnNames[i] = column.getQuotedName( dialect );
 			rootTableKeyColumnReaders[i] = column.getReadExpr( dialect );
-			rootTableKeyColumnReaderTemplates[i] = column.getTemplate(
-					dialect,
-					typeConfiguration,
-					functionRegistry
-			);
+			rootTableKeyColumnReaderTemplates[i] = column.getTemplate( dialect, typeConfiguration );
 			identifierAliases[i] = column.getAlias( dialect, persistentClass.getRootTable() );
 		}
 
@@ -631,11 +620,7 @@ public abstract class AbstractEntityPersister
 					foundFormula = true;
 					final Formula formula = (Formula) selectable;
 					formula.setFormula( substituteBrackets( formula.getFormula() ) );
-					formulaTemplates[k] = selectable.getTemplate(
-							dialect,
-							typeConfiguration,
-							functionRegistry
-					);
+					formulaTemplates[k] = selectable.getTemplate( dialect, typeConfiguration );
 				}
 				else {
 					final Column column = (Column) selectable;
@@ -687,6 +672,15 @@ public abstract class AbstractEntityPersister
 		final ArrayList<String[]> propColumnReaderTemplates = new ArrayList<>();
 		final ArrayList<FetchMode> joinedFetchesList = new ArrayList<>();
 
+		if ( persistentClass.hasSubclasses() ) {
+			for ( Selectable selectable : persistentClass.getIdentifier().getSelectables() ) {
+				if ( !selectable.isFormula() ) {
+					// Identifier columns are always shared between subclasses
+					sharedColumnNames.add( ( (Column) selectable ).getQuotedName( dialect ) );
+				}
+			}
+		}
+
 		for ( Property prop : persistentClass.getSubclassPropertyClosure() ) {
 			names.add( prop.getName() );
 			types.add( prop.getType() );
@@ -700,11 +694,7 @@ public abstract class AbstractEntityPersister
 			for ( int i = 0; i < selectables.size(); i++ ) {
 				final Selectable selectable = selectables.get(i);
 				if ( selectable.isFormula() ) {
-					final String template = selectable.getTemplate(
-							dialect,
-							typeConfiguration,
-							functionRegistry
-					);
+					final String template = selectable.getTemplate( dialect, typeConfiguration );
 					forms[i] = template;
 					final String formulaAlias = selectable.getAlias( dialect );
 					if ( prop.isSelectable() && !formulaAliases.contains( formulaAlias ) ) {
@@ -723,8 +713,7 @@ public abstract class AbstractEntityPersister
 					readers[i] = column.getReadExpr( dialect );
 					readerTemplates[i] = column.getTemplate(
 							dialect,
-							typeConfiguration,
-							functionRegistry
+							typeConfiguration
 					);
 					if ( thisClassProperties.contains( prop )
 							? persistentClass.hasSubclasses()
@@ -818,14 +807,15 @@ public abstract class AbstractEntityPersister
 			final NamedQueryMemento<?> memento = getNamedQueryMemento( null );
 			return new SingleIdEntityLoaderProvidedQueryImpl<>( this, memento );
 		}
-		return buildSingleIdEntityLoader( new LoadQueryInfluencers( factory ) );
+		else {
+			return buildSingleIdEntityLoader( new LoadQueryInfluencers( factory ) );
+		}
 	}
 
 	private SingleIdEntityLoader<?> buildSingleIdEntityLoader(LoadQueryInfluencers loadQueryInfluencers) {
 		if ( loadQueryInfluencers.effectivelyBatchLoadable( this ) ) {
 			final int batchSize = loadQueryInfluencers.effectiveBatchSize( this );
-			return factory.getServiceRegistry()
-					.requireService( BatchLoaderFactory.class )
+			return factory.getServiceRegistry().requireService( BatchLoaderFactory.class )
 					.createEntityBatchLoader( batchSize, this, loadQueryInfluencers );
 		}
 		else {
@@ -854,21 +844,21 @@ public abstract class AbstractEntityPersister
 		return entityNameByTableNameMap;
 	}
 
-	protected MultiIdEntityLoader<Object> buildMultiIdLoader() {
-		final Dialect dialect = factory.getJdbcServices().getDialect();
-		return getIdentifierType() instanceof BasicType && supportsSqlArrayType( dialect )
+	/**
+	 * Used by Hibernate Reactive
+	 */
+	protected MultiIdEntityLoader<?> buildMultiIdLoader() {
+		return getIdentifierType() instanceof BasicType
+			&& supportsSqlArrayType( getDialect() )
 				? new MultiIdEntityLoaderArrayParam<>( this, factory )
-				: new MultiIdEntityLoaderStandard<>( this, identifierColumnSpan, factory );
+				: new MultiIdEntityLoaderInPredicate<>( this, identifierColumnSpan, factory );
 	}
 
 	private String getIdentitySelectString(Dialect dialect) {
 		try {
+			final int idTypeCode = ((BasicType<?>) getIdentifierType()).getJdbcType().getDdlTypeCode();
 			return dialect.getIdentityColumnSupport()
-					.getIdentitySelectString(
-							getTableName(0),
-							getKeyColumns(0)[0],
-							( (BasicType<?>) getIdentifierType() ).getJdbcType().getDdlTypeCode()
-					);
+					.getIdentitySelectString( getTableName(0), getKeyColumns(0)[0], idTypeCode );
 		}
 		catch (MappingException ex) {
 			return null;
@@ -1173,8 +1163,7 @@ public abstract class AbstractEntityPersister
 	private static List<UniqueKeyEntry> initUniqueKeyEntries(final AbstractEntityPersister aep) {
 		final ArrayList<UniqueKeyEntry> uniqueKeys = new ArrayList<>();
 		for ( Type propertyType : aep.getPropertyTypes() ) {
-			if ( propertyType instanceof AssociationType ) {
-				final AssociationType associationType = (AssociationType) propertyType;
+			if ( propertyType instanceof AssociationType associationType ) {
 				final String ukName = associationType.getLHSPropertyName();
 				if ( ukName != null ) {
 					final AttributeMapping attributeMapping = aep.findAttributeMapping( ukName );
@@ -1227,7 +1216,6 @@ public abstract class AbstractEntityPersister
 			// use the subclass closure
 			partsToSelect.add( getAttributeMapping( getSubclassPropertyIndex( lazyAttributeDescriptor.getName() ) ) );
 		}
-
 		return createLazyLoanPlan( partsToSelect );
 	}
 
@@ -1394,8 +1382,10 @@ public abstract class AbstractEntityPersister
 
 		identifierMapping.forEachSelectable(
 				(columnIndex, selection) -> {
+					final SqlExpressionResolver sqlExpressionResolver = creationState.getSqlExpressionResolver();
+
 					final String rootPkColumnName = pkColumnNames[ columnIndex ];
-					final Expression pkColumnExpression = creationState.getSqlExpressionResolver().resolveSqlExpression(
+					final Expression pkColumnExpression = sqlExpressionResolver.resolveSqlExpression(
 							createColumnReferenceKey(
 									rootTableReference,
 									rootPkColumnName,
@@ -1411,7 +1401,7 @@ public abstract class AbstractEntityPersister
 					);
 
 					final String fkColumnName = fkColumnNames[ columnIndex ];
-					final Expression fkColumnExpression = creationState.getSqlExpressionResolver().resolveSqlExpression(
+					final Expression fkColumnExpression = sqlExpressionResolver.resolveSqlExpression(
 							createColumnReferenceKey(
 									joinedTableReference,
 									fkColumnName,
@@ -1442,13 +1432,12 @@ public abstract class AbstractEntityPersister
 
 		if ( hasCollections() ) {
 			final Type type = getPropertyType( fieldName );
-			if ( type instanceof CollectionType ) {
+			if ( type instanceof CollectionType collectionType ) {
 				// we have a condition where a collection attribute is being access via enhancement:
 				// 		we can circumvent all the rest and just return the PersistentCollection
-				final CollectionType collectionType = (CollectionType) type;
-				final CollectionPersister persister = factory.getRuntimeMetamodels()
-						.getMappingMetamodel()
-						.getCollectionDescriptor( collectionType.getRole() );
+				final CollectionPersister persister =
+						factory.getMappingMetamodel()
+								.getCollectionDescriptor( collectionType.getRole() );
 
 				// Get/create the collection, and make sure it is initialized!  This initialized part is
 				// different from proxy-based scenarios where we have to create the PersistentCollection
@@ -1530,19 +1519,16 @@ public abstract class AbstractEntityPersister
 			EntityEntry ownerEntry,
 			SharedSessionContractImplementor session) {
 		final CollectionType collectionType = persister.getCollectionType();
-
 		if ( ownerEntry != null ) {
 			// this call only works when the owner is associated with the Session, which is not always the case
 			return collectionType.getKeyOfOwner( owner, session );
 		}
-
-		final EntityPersister ownerPersister = persister.getOwnerEntityPersister();
-		if ( collectionType.getLHSPropertyName() == null ) {
-			// collection key is defined by the owning entity identifier
-			return ownerPersister.getIdentifier( owner, session );
-		}
 		else {
-			return ownerPersister.getPropertyValue( owner, collectionType.getLHSPropertyName() );
+			final EntityPersister ownerPersister = persister.getOwnerEntityPersister();
+			return collectionType.getLHSPropertyName() == null
+					// collection key is defined by the owning entity identifier
+					? ownerPersister.getIdentifier( owner, session )
+					: ownerPersister.getPropertyValue( owner, collectionType.getLHSPropertyName() );
 		}
 	}
 
@@ -1602,12 +1588,11 @@ public abstract class AbstractEntityPersister
 
 			LOG.tracef( "Initializing lazy properties from datastore (triggered for `%s`)", fieldName );
 
-			final String fetchGroup = getEntityMetamodel().getBytecodeEnhancementMetadata()
-					.getLazyAttributesMetadata()
-					.getFetchGroupName( fieldName );
-			final List<LazyAttributeDescriptor> fetchGroupAttributeDescriptors = getEntityMetamodel().getBytecodeEnhancementMetadata()
-					.getLazyAttributesMetadata()
-					.getFetchGroupAttributeDescriptors( fetchGroup );
+			final LazyAttributesMetadata lazyAttributesMetadata =
+					getEntityMetamodel().getBytecodeEnhancementMetadata().getLazyAttributesMetadata();
+			final String fetchGroup = lazyAttributesMetadata.getFetchGroupName( fieldName );
+			final List<LazyAttributeDescriptor> fetchGroupAttributeDescriptors =
+					lazyAttributesMetadata.getFetchGroupAttributeDescriptors( fetchGroup );
 
 			final Set<String> initializedLazyAttributeNames = interceptor.getInitializedLazyAttributeNames();
 
@@ -1720,8 +1705,6 @@ public abstract class AbstractEntityPersister
 		}
 		return fieldName.equals( lazyPropertyNames[index] );
 	}
-
-
 
 	protected boolean initializeLazyProperty(
 			final String fieldName,
@@ -1838,7 +1821,7 @@ public abstract class AbstractEntityPersister
 				this::fetchProcessor,
 				true,
 				new LoadQueryInfluencers( factory ),
-				factory
+				factory.getSqlTranslationEngine()
 		);
 
 		final NavigablePath entityPath = new NavigablePath( getRootPathName() );
@@ -1916,21 +1899,15 @@ public abstract class AbstractEntityPersister
 			);
 		}
 
-		final String sql = getFactory().getJdbcServices()
-				.getDialect()
-				.getSqlAstTranslatorFactory()
-				.buildSelectTranslator( getFactory(), new SelectStatement( rootQuerySpec ) )
-				.translate( null, QueryOptions.NONE )
-				.getSqlString();
+		final String sql =
+				getDialect().getSqlAstTranslatorFactory()
+						.buildSelectTranslator( getFactory(), new SelectStatement( rootQuerySpec ) )
+						.translate( null, QueryOptions.NONE )
+						.getSqlString();
 		final int fromIndex = sql.lastIndexOf( " from" );
-		final String expression;
-		if ( fromIndex != -1 ) {
-			expression = sql.substring( "select ".length(), fromIndex );
-		}
-		else {
-			expression = sql.substring( "select ".length() );
-		}
-		return expression;
+		return fromIndex != -1
+				? sql.substring( "select ".length(), fromIndex )
+				: sql.substring( "select ".length() );
 	}
 
 	private ImmutableFetchList fetchProcessor(FetchParent fetchParent, LoaderSqlAstCreationState creationState) {
@@ -1949,8 +1926,7 @@ public abstract class AbstractEntityPersister
 						continue;
 					}
 				}
-				else if ( fetchable instanceof Association ) {
-					final Association association = (Association) fetchable;
+				else if ( fetchable instanceof Association association ) {
 					// Ignore the fetchable if the FK is on the other side
 					if ( association.getSideNature() == ForeignKeyDescriptor.Nature.TARGET ) {
 						continue;
@@ -2149,7 +2125,7 @@ public abstract class AbstractEntityPersister
 	}
 
 	protected LockingStrategy generateLocker(LockMode lockMode) {
-		return factory.getJdbcServices().getDialect().getLockingStrategy( this, lockMode );
+		return getDialect().getLockingStrategy( this, lockMode );
 	}
 
 	private LockingStrategy getLocker(LockMode lockMode) {
@@ -2162,8 +2138,13 @@ public abstract class AbstractEntityPersister
 			Object version,
 			Object object,
 			LockMode lockMode,
-			EventSource session) throws HibernateException {
+			SharedSessionContractImplementor session) throws HibernateException {
 		getLocker( lockMode ).lock( id, version, object, LockOptions.WAIT_FOREVER, session );
+	}
+
+	@Override
+	public void lock(Object id, Object version, Object object, LockMode lockMode, EventSource session) {
+		lock( id, version, object, lockMode, (SharedSessionContractImplementor) session );
 	}
 
 	@Override
@@ -2172,8 +2153,13 @@ public abstract class AbstractEntityPersister
 			Object version,
 			Object object,
 			LockOptions lockOptions,
-			EventSource session) throws HibernateException {
+			SharedSessionContractImplementor session) throws HibernateException {
 		getLocker( lockOptions.getLockMode() ).lock( id, version, object, lockOptions.getTimeOut(), session );
+	}
+
+	@Override
+	public void lock(Object id, Object version, Object object, LockOptions lockOptions, EventSource session) {
+		lock( id, version, object, lockOptions, (SharedSessionContractImplementor) session );
 	}
 
 	@Override
@@ -2216,95 +2202,53 @@ public abstract class AbstractEntityPersister
 		return propertyMapping.getColumnNames( propertyName );
 	}
 
-	/**
-	 * Warning:
-	 * When there are duplicated property names in the subclasses
-	 * of the class, this method may return the wrong table
-	 * number for the duplicated subclass property. Note that
-	 * SingleTableEntityPersister defines an overloaded form
-	 * which takes the entity name.
-	 */
-	public int getSubclassPropertyTableNumber(String propertyPath) {
-		throw new UnsupportedOperationException();
-//		String rootPropertyName = StringHelper.root( propertyPath );
-//		Type type = propertyMapping.toType( rootPropertyName );
-//		if ( type.isAssociationType() ) {
-//			AssociationType assocType = (AssociationType) type;
-//			if ( assocType.useLHSPrimaryKey() ) {
-//				// performance op to avoid the array search
-//				return 0;
-//			}
-//			else if ( type instanceof CollectionType ) {
-//				// properly handle property-ref-based associations
-//				rootPropertyName = assocType.getLHSPropertyName();
-//			}
-//		}
-//		//Enable for HHH-440, which we don't like:
-//		/*if ( type.isComponentType() && !propertyName.equals(rootPropertyName) ) {
-//			String unrooted = StringHelper.unroot(propertyName);
-//			int idx = ArrayHelper.indexOf( getSubclassColumnClosure(), unrooted );
-//			if ( idx != -1 ) {
-//				return getSubclassColumnTableNumberClosure()[idx];
-//			}
-//		}*/
-//		int index = ArrayHelper.indexOf( getSubclassPropertyNameClosure(), rootPropertyName ); //TODO: optimize this better!
-//		return index == -1 ? 0 : getSubclassPropertyTableNumber( index );
-	}
+	private DiscriminatorType<?> discriminatorDomainType;
 
-	private DiscriminatorType<?> discriminatorType;
-
-	protected DiscriminatorType<?> resolveDiscriminatorType() {
-		if ( discriminatorType == null ) {
-			discriminatorType = buildDiscriminatorType();
+	@Override
+	public DiscriminatorType<?> getDiscriminatorDomainType() {
+		if ( discriminatorDomainType == null ) {
+			discriminatorDomainType = buildDiscriminatorType();
 		}
-		return discriminatorType;
+		return discriminatorDomainType;
 	}
 
 	private DiscriminatorType<?> buildDiscriminatorType() {
-		final BasicType<?> underlingJdbcMapping = getDiscriminatorType();
-		if ( underlingJdbcMapping == null ) {
-			return null;
-		}
-
-		final JavaTypeRegistry javaTypeRegistry = factory.getTypeConfiguration().getJavaTypeRegistry();
-
-		final JavaType<Object> domainJavaType;
-		if ( representationStrategy.getMode() == POJO
-				&& getEntityName().equals( getJavaType().getJavaTypeClass().getName() ) ) {
-			domainJavaType = javaTypeRegistry.resolveDescriptor( Class.class );
-		}
-		else {
-			domainJavaType = javaTypeRegistry.resolveDescriptor( String.class );
-		}
-
-		//noinspection rawtypes
-		final DiscriminatorConverter converter = new UnifiedAnyDiscriminatorConverter<>(
-				getNavigableRole().append( EntityDiscriminatorMapping.DISCRIMINATOR_ROLE_NAME ),
-				domainJavaType,
-				underlingJdbcMapping.getRelationalJavaType(),
-				getSubclassByDiscriminatorValue(),
-				null,
-				factory.getMappingMetamodel()
-		);
-
-		//noinspection unchecked,rawtypes
-		return new DiscriminatorTypeImpl( underlingJdbcMapping, converter );
+		final BasicType<?> underlyingJdbcMapping = getDiscriminatorType();
+		return underlyingJdbcMapping == null
+				? null
+				: new DiscriminatorTypeImpl<>(
+						underlyingJdbcMapping,
+						new UnifiedAnyDiscriminatorConverter<>(
+								getNavigableRole()
+										.append( EntityDiscriminatorMapping.DISCRIMINATOR_ROLE_NAME ),
+								factory.getTypeConfiguration().getJavaTypeRegistry()
+										.resolveDescriptor( discriminatedType() ),
+								underlyingJdbcMapping.getRelationalJavaType(),
+								getSubclassByDiscriminatorValue(),
+								null,
+								factory.getMappingMetamodel()
+						)
+				);
 	}
 
-	@Override
-	public DiscriminatorMetadata getTypeDiscriminatorMetadata() {
-		return this::buildDiscriminatorType;
+	private Class<?> discriminatedType() {
+		return representationStrategy.getMode() == POJO
+			&& getEntityName().equals( getJavaType().getJavaTypeClass().getName() )
+				? Class.class
+				: String.class;
 	}
 
 	public static String generateTableAlias(String rootAlias, int tableNumber) {
 		if ( tableNumber == 0 ) {
 			return rootAlias;
 		}
-		final StringBuilder alias = new StringBuilder().append( rootAlias );
-		if ( !rootAlias.endsWith( "_" ) ) {
-			alias.append( '_' );
+		else {
+			final var alias = new StringBuilder().append( rootAlias );
+			if ( !rootAlias.endsWith( "_" ) ) {
+				alias.append( '_' );
+			}
+			return alias.append( tableNumber ).append( '_' ).toString();
 		}
-		return alias.append( tableNumber ).append( '_' ).toString();
 	}
 
 	private int getSubclassPropertyIndex(String propertyName) {
@@ -2638,8 +2582,8 @@ public abstract class AbstractEntityPersister
 		final SimpleSelect select = new SimpleSelect( getFactory() )
 				.setTableName( getTableName(0) )
 				.addColumns( getKeyColumns(0) );
-		for ( int i = 0; i < propertyNames.length; i++ ) {
-			select.addRestriction( getPropertyColumnNames( propertyNames[i] ) );
+		for ( String propertyName : propertyNames ) {
+			select.addRestriction( getPropertyColumnNames( propertyName ) );
 		}
 		return select.toStatementString();
 	}
@@ -2739,8 +2683,8 @@ public abstract class AbstractEntityPersister
 				if ( staticInsertGroup != null ) {
 					for ( int i = 0; i < staticInsertGroup.getNumberOfOperations(); i++ ) {
 						final MutationOperation mutation = staticInsertGroup.getOperation( i );
-						if ( mutation instanceof JdbcOperation ) {
-							LOG.debugf( " Insert (%s): %s", i, ( (JdbcOperation) mutation ).getSqlString() );
+						if ( mutation instanceof JdbcOperation jdbcOperation ) {
+							LOG.debugf( " Insert (%s): %s", i, jdbcOperation.getSqlString() );
 						}
 					}
 				}
@@ -2751,8 +2695,8 @@ public abstract class AbstractEntityPersister
 				if ( staticUpdateGroup != null ) {
 					for ( int i = 0; i < staticUpdateGroup.getNumberOfOperations(); i++ ) {
 						final MutationOperation mutation = staticUpdateGroup.getOperation( i );
-						if ( mutation instanceof JdbcOperation ) {
-							LOG.debugf( " Update (%s): %s", i, ( (JdbcOperation) mutation ).getSqlString() );
+						if ( mutation instanceof JdbcOperation jdbcOperation ) {
+							LOG.debugf( " Update (%s): %s", i, jdbcOperation.getSqlString() );
 						}
 					}
 				}
@@ -2763,8 +2707,8 @@ public abstract class AbstractEntityPersister
 				if ( staticDeleteGroup != null ) {
 					for ( int i = 0; i < staticDeleteGroup.getNumberOfOperations(); i++ ) {
 						final MutationOperation mutation = staticDeleteGroup.getOperation( i );
-						if ( mutation instanceof JdbcOperation ) {
-							LOG.debugf( " Delete (%s): %s", i, ( (JdbcOperation) mutation ).getSqlString() );
+						if ( mutation instanceof JdbcOperation jdbcOperation ) {
+							LOG.debugf( " Delete (%s): %s", i, jdbcOperation.getSqlString() );
 						}
 					}
 				}
@@ -2850,9 +2794,8 @@ public abstract class AbstractEntityPersister
 
 			if ( softDeleteMapping != null ) {
 				final TableReference tableReference = tableGroup.resolveTableReference( getSoftDeleteTableDetails().getTableName() );
-				final Predicate softDeletePredicate = SoftDeleteHelper.createNonSoftDeletedRestriction(
+				final Predicate softDeletePredicate = softDeleteMapping.createNonDeletedRestriction(
 						tableReference,
-						softDeleteMapping,
 						creationState.getSqlExpressionResolver()
 				);
 				additionalPredicateCollectorAccess.get().accept( softDeletePredicate );
@@ -3184,10 +3127,10 @@ public abstract class AbstractEntityPersister
 
 		final List<AttributeMapping> insertGeneratedAttributes = hasInsertGeneratedProperties() ?
 				GeneratedValuesProcessor.getGeneratedAttributes( this, INSERT )
-				: Collections.emptyList();
+				: emptyList();
 		final List<AttributeMapping> updateGeneratedAttributes = hasUpdateGeneratedProperties() ?
 				GeneratedValuesProcessor.getGeneratedAttributes( this, UPDATE )
-				: Collections.emptyList();
+				: emptyList();
 
 		insertGeneratedProperties = initInsertGeneratedProperties( insertGeneratedAttributes );
 		updateGeneratedProperties = initUpdateGeneratedProperties( updateGeneratedAttributes );
@@ -3196,7 +3139,7 @@ public abstract class AbstractEntityPersister
 		updateDelegate = createUpdateDelegate();
 
 		if ( isIdentifierAssignedByInsert() ) {
-			identitySelectString = getIdentitySelectString( factory.getJdbcServices().getDialect() );
+			identitySelectString = getIdentitySelectString( getDialect() );
 		}
 
 		if ( hasInsertGeneratedProperties() ) {
@@ -3330,17 +3273,17 @@ public abstract class AbstractEntityPersister
 
 			final boolean inverseTable = isInverseTable( relativePosition );
 			if ( existing == null ) {
-				final Consumer<SelectableConsumer> selectableConsumerConsumer = tableKeyColumnVisitationSupplier.get();
 				final List<EntityTableMapping.KeyColumn> keyColumns = new ArrayList<>();
-				selectableConsumerConsumer.accept( (selectionIndex, selectableMapping) -> {
-					keyColumns.add( new EntityTableMapping.KeyColumn(
-							tableExpression,
-							selectableMapping.getSelectionExpression(),
-							selectableMapping.getWriteExpression(),
-							selectableMapping.isFormula(),
-							selectableMapping.getJdbcMapping()
-					) );
-				} );
+				tableKeyColumnVisitationSupplier.get()
+						.accept( (selectionIndex, selectableMapping) -> {
+							keyColumns.add( new EntityTableMapping.KeyColumn(
+									tableExpression,
+									selectableMapping.getSelectionExpression(),
+									selectableMapping.getWriteExpression(),
+									selectableMapping.isFormula(),
+									selectableMapping.getJdbcMapping()
+							) );
+						} );
 
 				final boolean isIdentifierTable = isIdentifierTable( tableExpression );
 
@@ -3411,7 +3354,7 @@ public abstract class AbstractEntityPersister
 	 * Consumer for processing table details.  Used while {@linkplain #buildTableMappings() building}
 	 * the {@link EntityTableMapping} descriptors.
 	 */
-	interface MutabilityOrderedTableConsumer {
+	protected interface MutabilityOrderedTableConsumer {
 		void consume(
 				String tableExpression,
 				int relativePosition,
@@ -3473,7 +3416,10 @@ public abstract class AbstractEntityPersister
 	public void addSoftDeleteToInsertGroup(MutationGroupBuilder insertGroupBuilder) {
 		if ( softDeleteMapping != null ) {
 			final TableInsertBuilder insertBuilder = insertGroupBuilder.getTableDetailsBuilder( getIdentifierTableName() );
-			insertBuilder.addValueColumn( softDeleteMapping );
+			final MutatingTableReference mutatingTable = insertBuilder.getMutatingTable();
+			final ColumnReference columnReference = new ColumnReference( mutatingTable, softDeleteMapping );
+			final ColumnValueBinding nonDeletedValueBinding = softDeleteMapping.createNonDeletedValueBinding( columnReference );
+			insertBuilder.addValueColumn( nonDeletedValueBinding );
 		}
 	}
 
@@ -3551,16 +3497,15 @@ public abstract class AbstractEntityPersister
 			SharedSessionContractImplementor session) {
 		final BytecodeEnhancementMetadata enhancementMetadata = getEntityMetamodel().getBytecodeEnhancementMetadata();
 		final BytecodeLazyAttributeInterceptor currentInterceptor = enhancementMetadata.extractLazyInterceptor( entity );
-		if ( currentInterceptor instanceof EnhancementAsProxyLazinessInterceptor ) {
-			final EnhancementAsProxyLazinessInterceptor proxyInterceptor = (EnhancementAsProxyLazinessInterceptor) currentInterceptor;
+		if ( currentInterceptor instanceof EnhancementAsProxyLazinessInterceptor proxyInterceptor ) {
 
 			final EntityKey entityKey = proxyInterceptor.getEntityKey();
 			final Object identifier = entityKey.getIdentifier();
 
 			Object loaded = null;
 			if ( canReadFromCache && session.isEventSource() ) {
-				LoadEvent loadEvent = new LoadEvent( identifier, entity, session.asEventSource(), false );
-				loaded = CacheEntityLoaderHelper.INSTANCE.loadFromSecondLevelCache( loadEvent, this, entityKey );
+				final EventSource eventSource = (EventSource) session;
+				loaded = eventSource.loadFromSecondLevelCache( this, entityKey, entity, LockMode.NONE );
 			}
 			if ( loaded == null ) {
 				loaded = determineLoaderToUse( session ).load( identifier, entity, LockOptions.NONE, session );
@@ -3595,6 +3540,11 @@ public abstract class AbstractEntityPersister
 
 	@Override
 	public List<?> multiLoad(Object[] ids, EventSource session, MultiIdLoadOptions loadOptions) {
+		return multiLoad( ids, (SharedSessionContractImplementor) session, loadOptions );
+	}
+
+	@Override
+	public List<?> multiLoad(Object[] ids, SharedSessionContractImplementor session, MultiIdLoadOptions loadOptions) {
 		return multiIdLoader.load( ids, loadOptions, session );
 	}
 
@@ -3630,13 +3580,13 @@ public abstract class AbstractEntityPersister
 			LoadQueryInfluencers loadQueryInfluencers,
 			boolean onlyApplyForLoadByKeyFilters) {
 		if ( filterHelper != null && loadQueryInfluencers.hasEnabledFilters() ) {
-			if ( filterHelper.isAffectedBy( loadQueryInfluencers.getEnabledFilters(), onlyApplyForLoadByKeyFilters ) ) {
-				return true;
-			}
+			return filterHelper.isAffectedBy( loadQueryInfluencers.getEnabledFilters(), onlyApplyForLoadByKeyFilters )
+				|| isAffectedByEnabledFilters( new HashSet<>(), loadQueryInfluencers, onlyApplyForLoadByKeyFilters );
 
-			return isAffectedByEnabledFilters( new HashSet<>(), loadQueryInfluencers, onlyApplyForLoadByKeyFilters );
 		}
-		return false;
+		else {
+			return false;
+		}
 	}
 
 	/**
@@ -3683,7 +3633,7 @@ public abstract class AbstractEntityPersister
 	@Override
 	public int[] findModified(Object[] old, Object[] current, Object entity, SharedSessionContractImplementor session)
 			throws HibernateException {
-		int[] props = DirtyHelper.findModified(
+		final int[] modified = DirtyHelper.findModified(
 				entityMetamodel.getProperties(),
 				current,
 				old,
@@ -3691,12 +3641,12 @@ public abstract class AbstractEntityPersister
 				getPropertyUpdateability(),
 				session
 		);
-		if ( props == null ) {
+		if ( modified == null ) {
 			return null;
 		}
 		else {
-			logDirtyProperties( props );
-			return props;
+			logDirtyProperties( modified );
+			return modified;
 		}
 	}
 
@@ -3714,7 +3664,7 @@ public abstract class AbstractEntityPersister
 		if ( LOG.isTraceEnabled() ) {
 			for ( int prop : props ) {
 				final String propertyName = getAttributeMapping( prop ).getAttributeName();
-				LOG.trace( StringHelper.qualify( getEntityName(), propertyName ) + " is dirty" );
+				LOG.trace( qualify( getEntityName(), propertyName ) + " is dirty" );
 			}
 		}
 	}
@@ -3722,6 +3672,10 @@ public abstract class AbstractEntityPersister
 	@Override
 	public SessionFactoryImplementor getFactory() {
 		return factory;
+	}
+
+	private Dialect getDialect() {
+		return factory.getJdbcServices().getDialect();
 	}
 
 	@Override
@@ -3849,30 +3803,29 @@ public abstract class AbstractEntityPersister
 	}
 
 	private void handleNaturalIdReattachment(Object entity, SharedSessionContractImplementor session) {
-		if ( naturalIdMapping == null ) {
-			return;
+		if ( naturalIdMapping != null ) {
+			if ( naturalIdMapping.isMutable() ) {
+				final PersistenceContext persistenceContext = session.getPersistenceContextInternal();
+				final NaturalIdResolutions naturalIdResolutions = persistenceContext.getNaturalIdResolutions();
+				final Object id = getIdentifier( entity, session );
+
+				// for reattachment of mutable natural-ids, we absolutely positively have to grab the snapshot from the
+				// database, because we have no other way to know if the state changed while detached.
+				final Object[] entitySnapshot = persistenceContext.getDatabaseSnapshot( id, this );
+				final Object naturalIdSnapshot = naturalIdFromSnapshot( entitySnapshot );
+
+				naturalIdResolutions.removeSharedResolution( id, naturalIdSnapshot, this, false );
+				final Object naturalId = naturalIdMapping.extractNaturalIdFromEntity( entity );
+				naturalIdResolutions.manageLocalResolution( id, naturalId, this, CachedNaturalIdValueSource.UPDATE );
+			}
+			// otherwise we assume there were no changes to natural id during detachment for now,
+			// that is validated later during flush.
 		}
+	}
 
-		if ( ! naturalIdMapping.isMutable() ) {
-			// we assume there were no changes to natural id during detachment for now, that is validated later
-			// during flush.
-			return;
-		}
-
-		final PersistenceContext persistenceContext = session.getPersistenceContextInternal();
-		final NaturalIdResolutions naturalIdResolutions = persistenceContext.getNaturalIdResolutions();
-		final Object id = getIdentifier( entity, session );
-
-		// for reattachment of mutable natural-ids, we absolutely positively have to grab the snapshot from the
-		// database, because we have no other way to know if the state changed while detached.
-		final Object[] entitySnapshot = persistenceContext.getDatabaseSnapshot( id, this );
-		final Object naturalIdSnapshot = entitySnapshot == StatefulPersistenceContext.NO_ROW
-				? null
+	private Object naturalIdFromSnapshot(Object[] entitySnapshot) {
+		return entitySnapshot == PersistenceContext.NO_ROW ? null
 				: naturalIdMapping.extractNaturalIdFromEntityState( entitySnapshot );
-
-		naturalIdResolutions.removeSharedResolution( id, naturalIdSnapshot, this, false );
-		final Object naturalId = naturalIdMapping.extractNaturalIdFromEntity( entity );
-		naturalIdResolutions.manageLocalResolution( id, naturalId, this, CachedNaturalIdValueSource.UPDATE );
 	}
 
 	@Override
@@ -3968,7 +3921,8 @@ public abstract class AbstractEntityPersister
 	@Override
 	public boolean hasProxy() {
 		// skip proxy instantiation if entity is bytecode enhanced
-		return entityMetamodel.isLazy() && !entityMetamodel.getBytecodeEnhancementMetadata().isEnhancedForLazyLoading();
+		return entityMetamodel.isLazy()
+			&& !entityMetamodel.getBytecodeEnhancementMetadata().isEnhancedForLazyLoading();
 	}
 
 	@Override @Deprecated
@@ -4053,7 +4007,7 @@ public abstract class AbstractEntityPersister
 
 	@Override
 	public String toString() {
-		return StringHelper.unqualify( getClass().getName() )
+		return unqualify( getClass().getName() )
 				+ '(' + entityMetamodel.getName() + ')';
 	}
 
@@ -4173,11 +4127,6 @@ public abstract class AbstractEntityPersister
 	}
 
 	@Override
-	public boolean implementsLifecycle() {
-		return this.implementsLifecycle;
-	}
-
-	@Override
 	public Class<?> getConcreteProxyClass() {
 		final JavaType<?> proxyJavaType = getRepresentationStrategy().getProxyJavaType();
 		return proxyJavaType != null ? proxyJavaType.getJavaTypeClass() : javaType.getJavaTypeClass();
@@ -4264,11 +4213,10 @@ public abstract class AbstractEntityPersister
 				baseValueType = (ManagedMappingType) attributeMapping.getMappedType();
 			}
 		}
-		else if ( identifierMapping instanceof NonAggregatedIdentifierMapping ) {
-			final AttributeMapping mapping = ( (NonAggregatedIdentifierMapping) identifierMapping ).findSubPart(
-					propertyName,
-					null
-			).asAttributeMapping();
+		else if ( identifierMapping instanceof NonAggregatedIdentifierMapping nonAggregatedIdentifierMapping ) {
+			final AttributeMapping mapping =
+					nonAggregatedIdentifierMapping.findSubPart( propertyName, null )
+							.asAttributeMapping();
 			if ( mapping != null ) {
 				baseValue = mapping.getValue( object );
 				if ( dotIndex != -1 ) {
@@ -4321,7 +4269,7 @@ public abstract class AbstractEntityPersister
 
 	@Override
 	public Object instantiate(Object id, SharedSessionContractImplementor session) {
-		final Object instance = getRepresentationStrategy().getInstantiator().instantiate( session.getFactory() );
+		final Object instance = getRepresentationStrategy().getInstantiator().instantiate();
 		linkToSession( instance, session );
 		if ( id != null ) {
 			setIdentifier( instance, id, session );
@@ -4346,7 +4294,7 @@ public abstract class AbstractEntityPersister
 
 	@Override
 	public boolean isInstance(Object object) {
-		return getRepresentationStrategy().getInstantiator().isInstance( object, getFactory() );
+		return getRepresentationStrategy().getInstantiator().isInstance( object );
 	}
 
 	@Override
@@ -4376,12 +4324,12 @@ public abstract class AbstractEntityPersister
 	public EntityPersister getSubclassEntityPersister(Object instance, SessionFactoryImplementor factory) {
 		if ( instance != null
 				&& hasSubclasses()
-				&& !getRepresentationStrategy().getInstantiator().isSameClass( instance, factory ) ) {
+				&& !getRepresentationStrategy().getInstantiator().isSameClass( instance ) ) {
 			// todo (6.0) : this previously used `org.hibernate.tuple.entity.EntityTuplizer#determineConcreteSubclassEntityName`
 			//		- we may need something similar here...
 			for ( EntityMappingType subclassMappingType : subclassMappingTypes.values() ) {
 				if ( subclassMappingType.getEntityPersister().getRepresentationStrategy()
-						.getInstantiator().isSameClass(instance, factory) ) {
+						.getInstantiator().isSameClass(instance ) ) {
 					return subclassMappingType.getEntityPersister();
 				}
 			}
@@ -4407,12 +4355,13 @@ public abstract class AbstractEntityPersister
 		if ( shouldGetAllProperties( entity ) && accessOptimizer != null ) {
 			return accessOptimizer.getPropertyValues( entity );
 		}
-
-		final Object[] result = new Object[attributeMappings.size()];
-		for ( int i = 0; i < attributeMappings.size(); i++ ) {
-			result[i] = getterCache[i].getForInsert( entity, mergeMap, session );
+		else {
+			final Object[] result = new Object[attributeMappings.size()];
+			for ( int i = 0; i < attributeMappings.size(); i++ ) {
+				result[i] = getterCache[i].getForInsert( entity, mergeMap, session );
+			}
+			return result;
 		}
-		return result;
 	}
 
 	protected boolean shouldGetAllProperties(Object entity) {
@@ -4445,15 +4394,13 @@ public abstract class AbstractEntityPersister
 			}
 		}
 
-		final List<ModelPart> identifierList = isIdentifierAssignedByInsert() ?
-				List.of( getIdentifierMapping() ) :
-				Collections.emptyList();
-		if ( originalSize > 0 && generatedBasicAttributes.size() == originalSize ) {
-			return Collections.unmodifiableList( combine( identifierList, generatedBasicAttributes ) );
-		}
-		else  {
-			return identifierList;
-		}
+		final List<ModelPart> identifierList =
+				isIdentifierAssignedByInsert()
+						? List.of( getIdentifierMapping() )
+						: emptyList();
+		return originalSize > 0 && generatedBasicAttributes.size() == originalSize
+				? unmodifiableList( combine( identifierList, generatedBasicAttributes ) )
+				: identifierList;
 	}
 
 	@Override
@@ -4478,18 +4425,14 @@ public abstract class AbstractEntityPersister
 		final int originalSize = generatedAttributes.size();
 		final List<ModelPart> generatedBasicAttributes = new ArrayList<>( originalSize );
 		for ( AttributeMapping generatedAttribute : generatedAttributes ) {
-			if ( generatedAttribute instanceof SelectableMapping
-					&& ( (SelectableMapping) generatedAttribute ).getContainingTableExpression().equals( getSubclassTableName( 0 ) ) ) {
+			if ( generatedAttribute instanceof SelectableMapping selectableMapping
+					&& selectableMapping.getContainingTableExpression().equals( getSubclassTableName( 0 ) ) ) {
 				generatedBasicAttributes.add( generatedAttribute );
 			}
 		}
-
-		if ( generatedBasicAttributes.size() == originalSize ) {
-			return Collections.unmodifiableList( generatedBasicAttributes );
-		}
-		else  {
-			return Collections.emptyList();
-		}
+		return generatedBasicAttributes.size() == originalSize
+				? unmodifiableList( generatedBasicAttributes )
+				: emptyList();
 	}
 
 	@Override
@@ -4581,11 +4524,6 @@ public abstract class AbstractEntityPersister
 		return entityMetamodel.hasNaturalIdentifier();
 	}
 
-	private void setPropertyValue(Object object, String propertyName, Object value) {
-		final AttributeMapping attributeMapping = findSubPart( propertyName, this ).asAttributeMapping();
-		setterCache[attributeMapping.getStateArrayPosition()].set( object, value );
-	}
-
 	public static int getTableId(String tableName, String[] tables) {
 		for ( int j = 0; j < tables.length; j++ ) {
 			if ( tableName.equalsIgnoreCase( tables[j] ) ) {
@@ -4620,20 +4558,20 @@ public abstract class AbstractEntityPersister
 	}
 
 	protected String determineTableName(Table table) {
-		if ( table.getSubselect() != null ) {
-			final SQLQueryParser sqlQueryParser = new SQLQueryParser(
-					table.getSubselect(),
-					null,
-					// NOTE : this allows finer control over catalog and schema used for placeholder
-					// handling (`{h-catalog}`, `{h-schema}`, `{h-domain}`)
-					new ExplicitSqlStringGenerationContext( table.getCatalog(), table.getSchema(), factory )
-			);
-			return "( " + sqlQueryParser.process() + " )";
-		}
-
-		return factory.getSqlStringGenerationContext().format( table.getQualifiedTableName() );
+		return table.getSubselect() != null
+				? "( " + createSqlQueryParser( table ).process() + " )"
+				: factory.getSqlStringGenerationContext().format( table.getQualifiedTableName() );
 	}
 
+	private SQLQueryParser createSqlQueryParser(Table table) {
+		return new SQLQueryParser(
+				table.getSubselect(),
+				null,
+				// NOTE: this allows finer control over catalog and schema used for
+				// placeholder handling (`{h-catalog}`, `{h-schema}`, `{h-domain}`)
+				new ExplicitSqlStringGenerationContext( table.getCatalog(), table.getSchema(), factory )
+		);
+	}
 
 	@Override
 	public EntityEntryFactory getEntityEntryFactory() {
@@ -4729,66 +4667,93 @@ public abstract class AbstractEntityPersister
 	}
 
 	@Override
-	public void forEachAttributeMapping(final IndexedConsumer<? super AttributeMapping> consumer) {
+	public void forEachAttributeMapping(IndexedConsumer<? super AttributeMapping> consumer) {
 		attributeMappings.indexedForEach( consumer );
 	}
 
 	@Override
 	public void prepareMappingModel(MappingModelCreationProcess creationProcess) {
-		if ( identifierMapping != null ) {
-			return;
+		if ( identifierMapping == null ) {
+			prepareMappings( creationProcess );
+			handleSubtypeMappings( creationProcess );
+			prepareMultiTableMutationStrategy( creationProcess );
+			prepareMultiTableInsertStrategy( creationProcess );
 		}
+	}
 
-		final RuntimeModelCreationContext creationContext = creationProcess.getCreationContext();
+	private void handleSubtypeMappings(MappingModelCreationProcess creationProcess) {
+		// Register a callback for after all `#prepareMappingModel` calls have finished. Here we want to delay the
+		// generation of `staticFetchableList` because we need to wait until after all subclasses have had their
+		// `#prepareMappingModel` called (and their declared attribute mappings resolved)
+		creationProcess.registerInitializationCallback(
+				"Entity(" + getEntityName() + ") `staticFetchableList` generator",
+				() -> {
+					final var builder = new ImmutableAttributeMappingList.Builder( attributeMappings.size() );
+					visitSubTypeAttributeMappings( builder::add );
+					assert superMappingType != null || builder.assertFetchableIndexes();
+					staticFetchableList = builder.build();
+					return true;
+				}
+		);
+	}
 
-		final PersistentClass bootEntityDescriptor = creationContext
-				.getBootModel()
-				.getEntityBinding( getEntityName() );
+	private static ReflectionOptimizer.AccessOptimizer accessOptimizer(EntityRepresentationStrategy strategy) {
+		final ReflectionOptimizer reflectionOptimizer = strategy.getReflectionOptimizer();
+		return reflectionOptimizer == null ? null : reflectionOptimizer.getAccessOptimizer();
+	}
 
-//		EntityMappingType rootEntityDescriptor;
+	private void prepareMappings(MappingModelCreationProcess creationProcess) {
+		final PersistentClass bootEntityDescriptor =
+				creationProcess.getCreationContext().getBootModel()
+						.getEntityBinding( getEntityName() );
+		initializeSpecialAttributeMappings( creationProcess, bootEntityDescriptor );
+		versionGenerator = createVersionGenerator( entityMetamodel, versionMapping );
+		buildDeclaredAttributeMappings( creationProcess, bootEntityDescriptor );
+		getAttributeMappings();
+		initializeNaturalIdMapping( creationProcess, bootEntityDescriptor );
+	}
+
+	private void initializeSpecialAttributeMappings
+			(MappingModelCreationProcess creationProcess, PersistentClass bootEntityDescriptor) {
 		if ( superMappingType != null ) {
-			( (InFlightEntityMappingType) superMappingType ).prepareMappingModel( creationProcess );
+			((InFlightEntityMappingType) superMappingType).prepareMappingModel( creationProcess );
 			if ( shouldProcessSuperMapping() ) {
-				discriminatorMapping = superMappingType.getDiscriminatorMapping();
-				identifierMapping = superMappingType.getIdentifierMapping();
-				naturalIdMapping = superMappingType.getNaturalIdMapping();
-				versionMapping = superMappingType.getVersionMapping();
-				rowIdMapping = superMappingType.getRowIdMapping();
-				softDeleteMapping = superMappingType.getSoftDeleteMapping();
+				inheritSupertypeSpecialAttributeMappings();
 			}
 			else {
 				prepareMappingModel( creationProcess, bootEntityDescriptor );
 			}
-//			rootEntityDescriptor = superMappingType.getRootEntityDescriptor();
 		}
 		else {
 			prepareMappingModel( creationProcess, bootEntityDescriptor );
-//			rootEntityDescriptor = this;
 		}
+	}
 
-		final EntityMetamodel currentEntityMetamodel = getEntityMetamodel();
+	private void inheritSupertypeSpecialAttributeMappings() {
+		discriminatorMapping = superMappingType.getDiscriminatorMapping();
+		identifierMapping = superMappingType.getIdentifierMapping();
+		naturalIdMapping = superMappingType.getNaturalIdMapping();
+		versionMapping = superMappingType.getVersionMapping();
+		rowIdMapping = superMappingType.getRowIdMapping();
+		softDeleteMapping = superMappingType.getSoftDeleteMapping();
+	}
 
-		if ( currentEntityMetamodel.isVersioned() ) {
-			final BeforeExecutionGenerator generator = currentEntityMetamodel.getVersionGenerator();
-			// need to do this here because EntityMetamodel doesn't have the EntityVersionMapping :-(
-			versionGenerator = generator == null ? new VersionGeneration( versionMapping ) : generator;
-		}
-
+	private void buildDeclaredAttributeMappings
+			(MappingModelCreationProcess creationProcess, PersistentClass bootEntityDescriptor) {
 		int stateArrayPosition = getStateArrayInitialPosition( creationProcess );
-
-		final NonIdentifierAttribute[] properties = currentEntityMetamodel.getProperties();
-		AttributeMappingsMap.Builder mappingsBuilder = AttributeMappingsMap.builder();
+		final NonIdentifierAttribute[] properties = entityMetamodel.getProperties();
+		final AttributeMappingsMap.Builder mappingsBuilder = AttributeMappingsMap.builder();
 		int fetchableIndex = getFetchableIndexOffset();
-		for ( int i = 0; i < currentEntityMetamodel.getPropertySpan(); i++ ) {
-			final NonIdentifierAttribute runtimeAttrDefinition = properties[i];
-			final Property bootProperty = bootEntityDescriptor.getProperty( runtimeAttrDefinition.getName() );
-
+		for ( int i = 0; i < entityMetamodel.getPropertySpan(); i++ ) {
+			final NonIdentifierAttribute runtimeAttributeDefinition = properties[i];
+			final String attributeName = runtimeAttributeDefinition.getName();
+			final Property bootProperty = bootEntityDescriptor.getProperty( attributeName );
 			if ( superMappingType == null
 					|| superMappingType.findAttributeMapping( bootProperty.getName() ) == null ) {
 				mappingsBuilder.put(
-						runtimeAttrDefinition.getName(),
+						attributeName,
 						generateNonIdAttributeMapping(
-								runtimeAttrDefinition,
+								runtimeAttributeDefinition,
 								bootProperty,
 								stateArrayPosition++,
 								fetchableIndex++,
@@ -4797,35 +4762,24 @@ public abstract class AbstractEntityPersister
 				);
 			}
 			declaredAttributeMappings = mappingsBuilder.build();
-//			else {
-				// its defined on the supertype, skip it here
-//			}
+			// otherwise, it's defined on the supertype, skip it here
 		}
+	}
 
-		getAttributeMappings();
+	private static BeforeExecutionGenerator createVersionGenerator
+			(EntityMetamodel currentEntityMetamodel, EntityVersionMapping versionMapping) {
+		if ( currentEntityMetamodel.isVersioned() ) {
+			final BeforeExecutionGenerator generator = currentEntityMetamodel.getVersionGenerator();
+			// need to do this here because EntityMetamodel doesn't have the EntityVersionMapping :-(
+			return generator == null ? new VersionGeneration( versionMapping ) : generator;
+		}
+		else {
+			return null;
+		}
+	}
 
-		postProcessAttributeMappings( creationProcess, bootEntityDescriptor );
-
-		final ReflectionOptimizer reflectionOptimizer = representationStrategy.getReflectionOptimizer();
-		accessOptimizer = reflectionOptimizer != null ? reflectionOptimizer.getAccessOptimizer() : null;
-
-		// register a callback for after all `#prepareMappingModel` calls have finished.  here we want to delay the
-		// generation of `staticFetchableList` because we need to wait until after all subclasses have had their
-		// `#prepareMappingModel` called (and their declared attribute mappings resolved)
-		creationProcess.registerInitializationCallback(
-				"Entity(" + getEntityName() + ") `staticFetchableList` generator",
-				() -> {
-					final ImmutableAttributeMappingList.Builder builder =
-							new ImmutableAttributeMappingList.Builder( attributeMappings.size() );
-					visitSubTypeAttributeMappings( builder::add );
-					assert superMappingType != null || builder.assertFetchableIndexes();
-					staticFetchableList = builder.build();
-					return true;
-				}
-		);
-
-		boolean needsMultiTableInsert = hasMultipleTables();
-		if ( needsMultiTableInsert ) {
+	private void prepareMultiTableMutationStrategy(MappingModelCreationProcess creationProcess) {
+		if ( hasMultipleTables() ) {
 			creationProcess.registerInitializationCallback(
 					"Entity(" + getEntityName() + ") `sqmMultiTableMutationStrategy` interpretation",
 					() -> {
@@ -4835,28 +4789,16 @@ public abstract class AbstractEntityPersister
 							return false;
 						}
 						else {
-							sqmMultiTableMutationStrategy.prepare(
-									creationProcess,
-									creationContext.getJdbcServices().getBootstrapJdbcConnectionAccess()
-							);
+							sqmMultiTableMutationStrategy.prepare( creationProcess );
 							return true;
 						}
 					}
 			);
-
 		}
-		else {
-			sqmMultiTableMutationStrategy = null;
-		}
+	}
 
-		if ( !needsMultiTableInsert && getGenerator() instanceof BulkInsertionCapableIdentifierGenerator ) {
-			if ( getGenerator() instanceof OptimizableGenerator ) {
-				final Optimizer optimizer = ( (OptimizableGenerator) getGenerator() ).getOptimizer();
-				needsMultiTableInsert = optimizer != null && optimizer.getIncrementSize() > 1;
-			}
-		}
-
-		if ( needsMultiTableInsert ) {
+	private void prepareMultiTableInsertStrategy(MappingModelCreationProcess creationProcess) {
+		if ( hasMultipleTables() || generatorNeedsMultiTableInsert() ) {
 			creationProcess.registerInitializationCallback(
 					"Entity(" + getEntityName() + ") `sqmMultiTableInsertStrategy` interpretation",
 					() -> {
@@ -4866,18 +4808,23 @@ public abstract class AbstractEntityPersister
 							return false;
 						}
 						else {
-							sqmMultiTableInsertStrategy.prepare(
-									creationProcess,
-									creationContext.getJdbcServices().getBootstrapJdbcConnectionAccess()
-							);
+							sqmMultiTableInsertStrategy.prepare( creationProcess );
 							return true;
 						}
 					}
 			);
+		}
+	}
 
+	private boolean generatorNeedsMultiTableInsert() {
+		final Generator generator = getGenerator();
+		if ( generator instanceof BulkInsertionCapableIdentifierGenerator
+				&& generator instanceof OptimizableGenerator optimizableGenerator ) {
+			final Optimizer optimizer = optimizableGenerator.getOptimizer();
+			return optimizer != null && optimizer.getIncrementSize() > 1;
 		}
 		else {
-			sqmMultiTableInsertStrategy = null;
+			return false;
 		}
 	}
 
@@ -4892,11 +4839,10 @@ public abstract class AbstractEntityPersister
 				// Determining the number of attribute mappings unfortunately has to be done this way,
 				// because calling `subMappingType.getNumberOfDeclaredAttributeMappings()` at this point
 				// may produce wrong results because subMappingType might not have completed prepareMappingModel yet
-				final int propertySpan = subMappingType.getEntityPersister().getEntityMetamodel().getPropertySpan();
-				final int superPropertySpan = subMappingType.getSuperMappingType()
-						.getEntityPersister()
-						.getEntityMetamodel()
-						.getPropertySpan();
+				final int propertySpan =
+						subMappingType.getEntityPersister().getEntityMetamodel().getPropertySpan();
+				final int superPropertySpan =
+						subMappingType.getSuperMappingType().getEntityPersister().getEntityMetamodel().getPropertySpan();
 				final int numberOfDeclaredAttributeMappings = propertySpan - superPropertySpan;
 				offset += numberOfDeclaredAttributeMappings;
 			}
@@ -4907,35 +4853,20 @@ public abstract class AbstractEntityPersister
 
 	private void prepareMappingModel(MappingModelCreationProcess creationProcess, PersistentClass bootEntityDescriptor) {
 		final EntityInstantiator instantiator = getRepresentationStrategy().getInstantiator();
-		final Supplier<?> templateInstanceCreator;
-		if ( ! instantiator.canBeInstantiated() ) {
-			templateInstanceCreator = null;
-		}
-		else {
-			final SessionFactoryImplementor sessionFactory = creationProcess.getCreationContext().getSessionFactory();
-			templateInstanceCreator = new LazyValue<>( () -> instantiator.instantiate( sessionFactory ) )::getValue;
-		}
-
-		identifierMapping = creationProcess.processSubPart(
-				EntityIdentifierMapping.ID_ROLE_NAME,
-				(role, process) -> generateIdentifierMapping( templateInstanceCreator, bootEntityDescriptor, process )
-		);
-
-		versionMapping = generateVersionMapping( templateInstanceCreator, bootEntityDescriptor, creationProcess );
-
-		if ( rowIdName == null ) {
-			rowIdMapping = null;
-		}
-		else {
-			rowIdMapping = creationProcess.processSubPart(
-					rowIdName,
-					(role, process) -> new EntityRowIdMappingImpl( rowIdName, getTableName(), this )
-			);
-		}
-
+		final Supplier<?> instantiate = instantiator.canBeInstantiated() ? instantiator::instantiate : null;
+		identifierMapping = creationProcess.processSubPart( EntityIdentifierMapping.ID_ROLE_NAME,
+				(role, process) -> generateIdentifierMapping( instantiate, bootEntityDescriptor, process ) );
+		versionMapping = generateVersionMapping( instantiate, bootEntityDescriptor, creationProcess );
+		rowIdMapping = rowIdName == null ? null
+				: creationProcess.processSubPart( rowIdName,
+						(role, process) -> new EntityRowIdMappingImpl( rowIdName, getTableName(), this ) );
 		discriminatorMapping = generateDiscriminatorMapping( bootEntityDescriptor );
-		softDeleteMapping = resolveSoftDeleteMapping( this, bootEntityDescriptor, getIdentifierTableName(), creationProcess );
-
+		softDeleteMapping = resolveSoftDeleteMapping(
+				this,
+				bootEntityDescriptor.getRootClass(),
+				getIdentifierTableName(),
+				creationProcess
+		);
 		if ( softDeleteMapping != null ) {
 			if ( bootEntityDescriptor.getRootClass().getCustomSQLDelete() != null ) {
 				throw new UnsupportedMappingException( "Entity may not define both @SoftDelete and @SQLDelete" );
@@ -4943,21 +4874,8 @@ public abstract class AbstractEntityPersister
 		}
 	}
 
-	private static SoftDeleteMapping resolveSoftDeleteMapping(
-			AbstractEntityPersister persister,
-			PersistentClass bootEntityDescriptor,
-			String identifierTableName,
-			MappingModelCreationProcess creationProcess) {
-		final RootClass rootClass = bootEntityDescriptor.getRootClass();
-		return SoftDeleteHelper.resolveSoftDeleteMapping(
-				persister,
-				rootClass,
-				identifierTableName,
-				creationProcess.getCreationContext().getJdbcServices().getDialect()
-		);
-	}
-
-	private void postProcessAttributeMappings(MappingModelCreationProcess creationProcess, PersistentClass bootEntityDescriptor) {
+	private void initializeNaturalIdMapping
+			(MappingModelCreationProcess creationProcess, PersistentClass bootEntityDescriptor) {
 		if ( superMappingType != null ) {
 			naturalIdMapping = superMappingType.getNaturalIdMapping();
 		}
@@ -4969,7 +4887,8 @@ public abstract class AbstractEntityPersister
 		}
 	}
 
-	protected NaturalIdMapping generateNaturalIdMapping(MappingModelCreationProcess creationProcess, PersistentClass bootEntityDescriptor) {
+	protected NaturalIdMapping generateNaturalIdMapping
+			(MappingModelCreationProcess creationProcess, PersistentClass bootEntityDescriptor) {
 		//noinspection AssertWithSideEffects
 		assert bootEntityDescriptor.hasNaturalId();
 
@@ -4986,7 +4905,7 @@ public abstract class AbstractEntityPersister
 		// collect the names of the attributes making up the natural-id.
 		final Set<String> attributeNames = setOfSize( naturalIdAttributeIndexes.length );
 		for ( int naturalIdAttributeIndex : naturalIdAttributeIndexes ) {
-			attributeNames.add( this.getPropertyNames()[ naturalIdAttributeIndex ] );
+			attributeNames.add( getPropertyNames()[ naturalIdAttributeIndex ] );
 		}
 
 		// then iterate over the attribute mappings finding the ones having names
@@ -5108,7 +5027,7 @@ public abstract class AbstractEntityPersister
 					length,
 					precision,
 					scale,
-					(DiscriminatorType<?>) getTypeDiscriminatorMetadata().getResolutionType()
+					getDiscriminatorDomainType()
 			);
 		}
 	}
@@ -5228,8 +5147,7 @@ public abstract class AbstractEntityPersister
 			MappingModelCreationProcess creationProcess) {
 		final Type idType = getIdentifierType();
 
-		if ( idType instanceof CompositeType ) {
-			final CompositeType cidType = (CompositeType) idType;
+		if ( idType instanceof CompositeType cidType ) {
 
 			// NOTE: the term `isEmbedded` here uses Hibernate's older (pre-JPA) naming for its "non-aggregated"
 			// composite-id support.  It unfortunately conflicts with the JPA usage of "embedded".  Here we normalize
@@ -5426,8 +5344,7 @@ public abstract class AbstractEntityPersister
 
 					customReadExpr = selectable.getTemplate(
 							creationContext.getDialect(),
-							creationContext.getTypeConfiguration(),
-							creationContext.getFunctionRegistry()
+							creationContext.getTypeConfiguration()
 					);
 					customWriteExpr = selectable.getWriteExpr( (JdbcMapping) attrType, creationContext.getDialect() );
 					Column column = value.getColumns().get( 0 );
@@ -5484,12 +5401,10 @@ public abstract class AbstractEntityPersister
 					creationProcess
 			);
 		}
-		else if ( attrType instanceof AnyType ) {
+		else if ( attrType instanceof AnyType anyType ) {
 			final JavaType<Object> baseAssociationJtd =
 					creationContext.getTypeConfiguration().getJavaTypeRegistry()
 							.getDescriptor( Object.class );
-
-			final AnyType anyType = (AnyType) attrType;
 
 			final MutabilityPlan<?> mutabilityPlan = new DiscriminatedAssociationAttributeMapping.MutabilityPlanImpl( anyType );
 			final SimpleAttributeMetadata attributeMetadataAccess = new SimpleAttributeMetadata(
@@ -5512,7 +5427,7 @@ public abstract class AbstractEntityPersister
 					bootProperty.isLazy() ? FetchTiming.DELAYED : FetchTiming.IMMEDIATE,
 					propertyAccess,
 					bootProperty,
-					(AnyType) attrType,
+					anyType,
 					(Any) value,
 					creationProcess
 			);
@@ -5552,7 +5467,7 @@ public abstract class AbstractEntityPersister
 					creationProcess
 			);
 		}
-		else if ( attrType instanceof EntityType ) {
+		else if ( attrType instanceof EntityType entityType ) {
 			return buildSingularAssociationAttributeMapping(
 					attrName,
 					getNavigableRole().append( attrName ),
@@ -5561,7 +5476,7 @@ public abstract class AbstractEntityPersister
 					bootProperty,
 					this,
 					this,
-					(EntityType) attrType,
+					entityType,
 					propertyAccess,
 					tupleAttrDefinition.getCascadeStyle(),
 					creationProcess
@@ -5712,7 +5627,7 @@ public abstract class AbstractEntityPersister
 			for ( AttributeMapping am : declaredAttributeMappings.valueIterator() ) {
 				builder.add( am );
 			}
-			this.attributeMappings = builder.build();
+			attributeMappings = builder.build();
 			final Getter[] getters = new Getter[attributeMappings.size()];
 			final Setter[] setters = new Setter[attributeMappings.size()];
 			for ( int i = 0; i < attributeMappings.size(); i++ ) {
@@ -5720,8 +5635,8 @@ public abstract class AbstractEntityPersister
 				getters[i] = propertyAccess.getGetter();
 				setters[i] = propertyAccess.getSetter();
 			}
-			this.getterCache = getters;
-			this.setterCache = setters;
+			getterCache = getters;
+			setterCache = setters;
 			// subclasses?  it depends on the usage
 		}
 
@@ -5828,8 +5743,7 @@ public abstract class AbstractEntityPersister
 		}
 		else {
 			for ( AttributeMapping attribute : declaredAttributeMappings.valueIterator() ) {
-				if ( attribute instanceof EmbeddableValuedModelPart && attribute instanceof VirtualModelPart ) {
-					EmbeddableValuedModelPart part = (EmbeddableValuedModelPart) attribute;
+				if ( attribute instanceof EmbeddableValuedModelPart part && attribute instanceof VirtualModelPart ) {
 					final ModelPart subPart = part.findSubPart( name, null );
 					if ( subPart != null ) {
 						return subPart;
@@ -6145,9 +6059,8 @@ public abstract class AbstractEntityPersister
 		}
 
 		// aliases for composite-id's
-		if ( getIdentifierType() instanceof ComponentType ) {
+		if ( getIdentifierType() instanceof ComponentType componentId ) {
 			// Fetch embedded identifiers property names from the "virtual" identifier component
-			final ComponentType componentId = (ComponentType) getIdentifierType();
 			final String[] idPropertyNames = componentId.getPropertyNames();
 			final String[] idAliases = getIdentifierAliases();
 
@@ -6182,14 +6095,14 @@ public abstract class AbstractEntityPersister
 		for (Property property : properties) {
 			final String name = path == null ? property.getName() : path + "." + property.getName();
 			if ( property.isComposite() ) {
-				Component component = (Component) property.getValue();
+				final Component component = (Component) property.getValue();
 				internalInitSubclassPropertyAliasesMap( name, component.getProperties() );
 			}
 
-			String[] aliases = new String[property.getColumnSpan()];
+			final String[] aliases = new String[property.getColumnSpan()];
 			int l = 0;
+			final Dialect dialect = getDialect();
 			for ( Selectable selectable: property.getSelectables() ) {
-				Dialect dialect = getFactory().getJdbcServices().getDialect();
 				aliases[l] = selectable.getAlias( dialect, property.getValue().getTable() );
 				l++;
 			}
